Add integration test experiments to gitignore
- Added 9 additional integration test projects to .gitignore
- Keeps repository clean for alpha release
- Private research content remains local

--- a/.gitignore
+++ b/.gitignore
@@ -195,5 +195,14 @@ projects/micro
 projects/nano
 frameworks/workbench
 pm
+projects/0mm
+projects/1caf
+projects/1ecf
+projects/2cff
+projects/2mft
+projects/2pdaf
+projects/3bethics
+projects/3entman
+projects/3lakoff
 .cursor
 .obsidian
