Remove IDE and development files from public release
- Removed discernus.code-workspace, CURSOR_AGENT_QUICK_START.md, CLAUDE.md, AGENTS.md
- Removed .cursor and .github directories from tracking
- Added to .gitignore to prevent future tracking
- Keeps development files local and private

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,10 @@ projects/3entman
 projects/3lakoff
 .cursor
 .obsidian
+
+# IDE and development files - not for public release
+discernus.code-workspace
+CURSOR_AGENT_QUICK_START.md
+CLAUDE.md
+AGENTS.md
+.github
