Remove development configuration files from public release
- Removed .obsidian, .gitattributes, .gitignore, .pylintrc from tracking
- Added to .gitignore to prevent future tracking
- These are development/IDE configuration files not needed for public release
- Keeps development environment files local and private

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,9 @@ CURSOR_AGENT_QUICK_START.md
 CLAUDE.md
 AGENTS.md
 .github
+
+# Development configuration files - not for public release
+.gitignore
+.gitattributes
+.pylintrc
+.obsidian
