Remove deprecated code and internal docs from public release
- Removed 134 deprecated agent and core files
- Removed debug_yaml.py debug script
- Removed docs/archive/ internal process documentation
- Removed CURSOR_AGENT_* internal development docs
- Added to .gitignore to prevent future tracking
- Keeps deprecated code and internal docs local only
- Repository is now clean for alpha release

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,10 @@ AGENTS.md
 
 # Tools directory - will be moved to Tools open source project
 tools
+
+# Deprecated code and debug files - not for public release
+discernus/agents/deprecated/
+discernus/core/deprecated/
+debug_yaml.py
+docs/archive/
+docs/developer/CURSOR_AGENT_*.md
